--- a/server/core/templates/generic_page.html
+++ b/server/core/templates/generic_page.html
@@ -27,7 +27,7 @@
     {% if page.get_descendants.count %}
         <h2>Descendants</h2>
         <ul>
-            {% for a in page.get_descendants %}
+            {% for a in page.get_children %}
                 <li>
                     <a href="{{ a.url }}">
                         {{ a.specific|class_name }}: {{ a.title }}
