--- a/server/core/templates/wagtailadmin/admin_base.html
+++ b/server/core/templates/wagtailadmin/admin_base.html
@@ -3,14 +3,22 @@
 
 {% block extra_css %}
     <style>
-    
+
         .logo {
             text-align: left;
             font-size: 20px;
         }
 
+        .logo:hover {
+            color: #fff
+        }
+
         header, .page-explorer .listing .index, .tab-nav.merged {
             background-color: #3F3F3F;
+        }
+
+        input[type=checkbox]:checked:before {
+            color: #FD6E22;
         }
 
         a {
@@ -18,6 +26,10 @@
         }
 
         a:hover {
+            color: #6f2801;
+        }
+
+        .nolink:hover {
             color: #6f2801;
         }
 
@@ -102,6 +114,10 @@
             background-color: #FD6E22;
         }
 
+        .listing.chooser tbody tr:hover {
+            background-color: #FD6E22;
+        }
+
         .t-default .u-btn-current {
             color: #FD6E22;
         }
@@ -116,7 +132,7 @@
         }
 
         .page-explorer .listing .index .button {
-            border-color: #FD6E22;
+            border-color: rgba(0, 0, 0, .25);;
         }
 
         .teal, .icon.teal {
