--- a/server/core/templates/wagtailadmin/admin_base.html
+++ b/server/core/templates/wagtailadmin/admin_base.html
@@ -30,15 +30,15 @@
         }
 
         a:hover {
-            color: #6f2801;
+            color: #c54602;
         }
 
         .nolink:hover {
-            color: #6f2801;
+            color: #c54602;
         }
 
         .listing .title h2 a:hover {
-            color: #6f2801;
+            color: #c54602;
         }
 
         .nav-main .menu-active > a {
