--- a/server/core/templates/registration/login.html
+++ b/server/core/templates/registration/login.html
@@ -12,7 +12,7 @@
 
 
     {% if form.errors %}
-        <p class="alert alert-error">Benutername und Passwort stimmen nicht überein.</p>
+        <p class="alert alert-error">Benutzername und Passwort stimmen nicht überein.</p>
     {% endif %}
 
 
