--- a/server/core/templates/base.html
+++ b/server/core/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>{% block title %}talentLab{% endblock %}</title>
+    <title>{% block title %}talentab{% endblock %}</title>
     <meta name="description" content="">
     <meta name="author" content="talentlab.ch">
 
