--- a/server/core/static/styles/main.scss
+++ b/server/core/static/styles/main.scss
@@ -8,6 +8,8 @@ $grey-2: #D8D8D8;
 $grey-4: #AFB1B1;
 $grey-9: #3F3F3F;
 
+$light-white: rgba(255, 255, 255, 0.12);
+
 $orange: #FD6E22;
 $orange-shadow: #c54602;
 
@@ -21,26 +23,24 @@ $text-color: $grey-9;
 $font-family: 'Arimo', Arial, sans-serif;
 $base-font-size: 15px;
 
+$space: 10px;
+
 body {
   font-family: $font-family;
   font-size: $base-font-size;
   color: $text-color;
 }
 
-h2, .h2 {
-
-}
-
-h3, .h3 {
-
-}
-
 h4, .h4 {
   font-size: 18px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .alert {
-  padding: 20px;
+  padding: $space;
 }
 
 .alert-error {
@@ -52,10 +52,6 @@ h4, .h4 {
   border: 1px solid $blue-shadow;
   background-color: $blue;
   color: $text-color;
-}
-
-a {
-  text-decoration: none;
 }
 
 .orange-bg {
@@ -80,14 +76,22 @@ a {
   box-shadow: none;
 }
 
-.input-field {
-  input:focus {
-    border-bottom: 1px solid $orange !important;
-    box-shadow: 0 1px 0 0 $orange !important;
+input[type=text], input[type=password], select {
+  width: 100%;
+  padding: $space;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid $grey-4;
+  border-radius: 2px;
+  box-sizing: border-box;
+  background-color: $light-white;
+  color: $white;
+}
 
-    & + label {
-      color: $white !important;
-    }
+.mt-1 {
+  margin-top: $space;
+}
 
-  }
+.mb-1 {
+  margin-bottom: $space;
 }
