--- a/client/src/styles/var.scss
+++ b/client/src/styles/var.scss
@@ -14,5 +14,5 @@ $blue-shadow: #B6CCD4;
 
 
 $text-color: $grey-9;
-$font-family: 'Arimo', Arial, sans-serif;
+$font-family: 'Montserrat', Arial, sans-serif;
 $base-font-size: 15px;
