PageUnit angefangen zu programmieren

--- a/client/src/styles/var.scss
+++ b/client/src/styles/var.scss
@@ -10,6 +10,10 @@ $orange-shadow: #c54602;
 $blue: #EDF7FA;
 $blue-shadow: #B6CCD4;
 
+$beige: #F3F0EB;
+
 $text-color: $grey-9;
 $font-family: 'Montserrat', Arial, sans-serif;
 $base-font-size: 15px;
+
+$learn-unit-bg-color: $beige;
