button style: added missing v-style

--- a/client/src/styles/button.scss
+++ b/client/src/styles/button.scss
@@ -1,15 +1,15 @@
-.btn--active .btn__content:before, .btn:focus .btn__content:before, .btn:hover .btn__content:before .btn:not(.btn--depressed) {
+.v-btn--active .v-btn__content:before, .v-btn:focus .v-btn__content:before, .v-btn:hover .v-btn__content:before .v-btn:not(.v-btn--depressed) {
   background-color: transparent;
 }
 
 
-.theme--light .v-btn:not(.btn--icon):not(.btn--flat) {
+.theme--light .v-btn:not(.v-btn--icon):not(.v-btn--flat) {
   background-color: transparent;
 }
 
 // fix for the misaligned buttons, however still the case in IE1X
 
-button.v-btn {
+button.v-btn:not(.v-btn--icon):not(.v-btn--flat) {
   text-transform: initial;
   border: 2px solid #FD6E22;
   padding-bottom: 32px;
