--- a/client/src/styles/button.scss
+++ b/client/src/styles/button.scss
@@ -2,7 +2,6 @@
   background-color: transparent;
 }
 
-
 .theme--light .v-btn:not(.v-btn--icon):not(.v-btn--flat) {
   background-color: transparent;
 }
@@ -15,7 +14,7 @@ button.v-btn:not(.v-btn--icon):not(.v-btn--flat) {
   padding-bottom: 32px;
   font-size: 15px;
   box-shadow: none !important;
-
+  background-color: transparent !important;
   .v-btn__content {
     padding-bottom: 4px;
   }
