--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -52,3 +52,13 @@ a {
   clear: both;
   display: table;
 }
+
+main{
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  content: "";
+  clear: both;
+  display: table;
+}
+
