--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -53,12 +53,12 @@ a {
   display: table;
 }
 
-main {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  content: "";
-  clear: both;
-  display: table;
-}
+//main {
+//  max-width: 1200px;
+//  margin-left: auto;
+//  margin-right: auto;
+//  content: "";
+//  clear: both;
+//  display: table;
+//}
 
