--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -43,6 +43,10 @@ a {
   text-align: center;
 }
 
+.text--primary-accent {
+  color: $primary;
+}
+
 .capitalize {
   text-transform: capitalize;
 }
