--- a/client/src/styles/var.scss
+++ b/client/src/styles/var.scss
@@ -1,3 +1,5 @@
+// color definitions
+
 $grey-1: #F7F7F7;
 $grey-3: #F3F3F3;
 $grey-2: #D8D8D8;
@@ -12,8 +14,21 @@ $blue-shadow: #B6CCD4;
 
 $beige: #F3F0EB;
 
+$violet: #59006F;
+$violet-shadow: #59006F;
+
+// color schema
+
+$primary: $orange;
+$primary-variant: $orange-shadow;
+
+$secondary: $violet;
+$secondary-variant: $violet-shadow;
+
+// text style
+
 $text-color: $grey-9;
-$font-family: 'Montserrat', Arial, sans-serif;
+$font-family: 'Rubik', Arial, sans-serif;
 $base-font-size: 15px;
 
 $learn-unit-bg-color: $beige;
