--- a/client/src/styles/_button.scss
+++ b/client/src/styles/_button.scss
@@ -10,26 +10,21 @@
     background-color: rgba(255, 255, 255, 0.2);
   }
 
-  // TODO: this is not a solution, because it overwrites the secondary button style
-  //&.btn-primary {
-  //  background-color: $primary;
-  //  color: red;
-  //}
-
-  background-color: $primary; // $orange; // #FD6E22; //  darken($primary, 10);
+  background-color: $primary;
+  // keep this line here or otherwise the above rule will not apply
   color: white;
 }
 
 // fix for the misaligned buttons, however still the case in IE1X
 
-//button.v-btn:not(.v-btn--icon):not(.v-btn--flat) {
-//  color: #FFFFFF;
-//  text-transform: initial;
-//  padding-bottom: 32px;
-//  font-size: 15px;
-//  box-shadow: none !important;
-//  background-color: $primary;
-//}
+button.v-btn:not(.v-btn--icon):not(.v-btn--flat) {
+  text-transform: initial;
+  padding-bottom: 32px;
+  font-size: 15px;
+  box-shadow: none !important;
+  background-color: $primary;
+  color: white;
+}
 
 .v-btn {
   border-radius: 0;
