--- a/client/src/styles/_button.scss
+++ b/client/src/styles/_button.scss
@@ -24,17 +24,16 @@
 
 // fix for the misaligned buttons, however still the case in IE1X
 
-button.v-btn:not(.v-btn--icon):not(.v-btn--flat) {
-  text-transform: initial;
-  padding-bottom: 32px;
-  font-size: 15px;
+.v-btn:not(.v-btn--icon):not(.v-btn--flat){
   box-shadow: none !important;
   background-color: $primary;
   color: white;
 }
 
-.v-btn {
+.v-btn:not(.v-btn--floating) {
   border-radius: 0;
+  text-transform: initial;
+  font-size: $base-font-size;
 }
 
 a.v-btn {
@@ -44,7 +43,7 @@ a.v-btn {
 }
 
 .btn-secondary {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .btn-minimal {
