--- a/server/core/templates/registration/login.html
+++ b/server/core/templates/registration/login.html
@@ -3,33 +3,38 @@
 {% block body_class %}dark-bg{% endblock %}
 
 {% block body %}
+    <div class="v-center-container">
 
-    <h1>talent<b>lab</b></h1>
+        <div class="v-center-item">
+            <a href="/" class="logo">
+                talent<b>lab</b>
+            </a>
 
-    {% if next %}
-        <div class="h4">Melde dich jetzt an.</div>
-    {% endif %}
-
-
-    {% if form.errors %}
-        <p class="alert alert-error">Benutzername und Passwort stimmen nicht überein.</p>
-    {% endif %}
+            {% if next %}
+                <div>Melde dich jetzt an.</div>
+            {% endif %}
 
 
-    <form method="post" class="mt-1" action="{% url 'login' %}">
-        {% csrf_token %}
+            {% if form.errors %}
+                <p class="alert alert-error">Benutzername und Passwort stimmen nicht überein.</p>
+            {% endif %}
 
-        <div>
-            {{ form.username.label_tag }}
-            {{ form.username }}
+
+            <form method="post" class="mt-1" action="{% url 'login' %}">
+                {% csrf_token %}
+
+                <div>
+                    {{ form.username.label_tag }}
+                    {{ form.username }}
+                </div>
+                <div>
+                    {{ form.password.label_tag }}
+                    {{ form.password }}
+                </div>
+
+                <button class="btn btn-orange mt-1" type="submit" name="action">Anmelden</button>
+                <input type="hidden" name="next" value="{{ next }}"/>
+            </form>
         </div>
-        <div>
-            {{ form.password.label_tag }}
-            {{ form.password }}
-        </div>
-
-        <button class="btn btn-orange mt-1" type="submit" name="action">Anmelden</button>
-        <input type="hidden" name="next" value="{{ next }}"/>
-    </form>
-
+    </div>
 {% endblock %}
