--- a/client/src/styles/_navigation.scss
+++ b/client/src/styles/_navigation.scss
@@ -22,6 +22,6 @@
 }
 
 .v-menu__content .theme--dark.v-list {
-  background-color: $secondary-transition;
+  background-color: $violet-transition;
   color: $white;
 }
