--- a/client/src/styles/_var.scss
+++ b/client/src/styles/_var.scss
@@ -10,7 +10,8 @@ $grey-9: #3F3F3F;
 $orange: #FD6E22;
 $orange-opacity: rgba($orange, 0.15);
 
-$blue: #EDF7FA;
+$blue: #D0EBF5;
+$blue-opacity: rgba($blue, 0.5);
 
 $beige: #F3F0EB;
 
@@ -18,12 +19,15 @@ $violet: #400A4D;
 $violet-transition: #59006F;
 
 $mint: #A4D5A4;
+$mint-opacity: rgba($mint, 0.3);
 
 // text style
 
 $text-color: $grey-9;
 $font-family: 'Rubik', Arial, sans-serif;
+
 $base-font-size: 15px;
 $footer-font-size: 12px;
 
-$learn-unit-bg-color: $beige;
+$h2-font-size: 24px;
+$lead-font-size: $h2-font-size;
