--- a/client/src/styles/_var.scss
+++ b/client/src/styles/_var.scss
@@ -1,6 +1,10 @@
 // color definitions
 
+
+
 $white: #ffffff;
+
+// TODO do we need all that grey stuff?
 $grey-1: #F7F7F7;
 $grey-3: #F3F3F3;
 $grey-2: #D8D8D8;
