--- a/client/src/styles/_dialog.scss
+++ b/client/src/styles/_dialog.scss
@@ -4,12 +4,19 @@ $toolbar-color: rgba(255, 255, 255, 0.6);
 
 .v-dialog {
 
+  .small--content {
+    max-width: 700px;
+    margin: auto;
+  }
+
+
+  color: $white;
+
   .v-card {
-    
     &.light {
+      color: $text-color;
       background-color: $white;
     }
-
   }
 
   .v-toolbar.primary {
@@ -21,7 +28,7 @@ $toolbar-color: rgba(255, 255, 255, 0.6);
   }
 
   .v-toolbar__title {
-    color: $toolbar-color;
+    color: $white;
   }
 
   .v-toolbar__content {
@@ -57,6 +64,10 @@ $toolbar-color: rgba(255, 255, 255, 0.6);
     position: absolute;
     bottom: 0;
     left: 0;
+  }
+
+  .theme--light.v-breadcrumbs li .v-breadcrumbs__item--disabled {
+    color: $white;
   }
 
   .breadcrumbs-item--active {
