--- a/client/src/styles/_dialog.scss
+++ b/client/src/styles/_dialog.scss
@@ -4,13 +4,16 @@ $toolbar-color: rgba(255, 255, 255, 0.6);
 
 .v-dialog {
 
+  color: $white;
+
   .small--content {
     max-width: 700px;
     margin: auto;
   }
 
-
-  color: $white;
+  .three-line {
+    min-height: 70px;
+  }
 
   .v-card {
     &.light {
