--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -17,11 +17,13 @@ a {
 h1, .h1 {
   font-size: 44px;
   line-height: 58px;
+  font-weight: 400;
 }
 
 h2, .h2 {
   font-size: $h2-font-size;
   line-height: 34px;
+  font-weight: 400;
 }
 
 h3, .h3 {
@@ -37,7 +39,6 @@ h4, .h4 {
   color: initial;
   text-transform: initial;
 }
-
 
 .lead {
   font-size: $lead-font-size;
