coachind dialog dummy

--- a/client/src/styles/_dialog.scss
+++ b/client/src/styles/_dialog.scss
@@ -98,6 +98,11 @@ $toolbar-color: rgba(255, 255, 255, 0.6);
     margin: auto;
   }
 
+  .medium--content {
+    max-width: 1000px;
+    margin: auto;
+  }
+
   .three-line {
     min-height: 70px;
   }
