--- a/client/src/styles/_card.scss
+++ b/client/src/styles/_card.scss
@@ -1,10 +1,12 @@
 .v-card {
   border-radius: 0;
+  box-shadow: none;
+  border: 1px solid $border-color;
 }
 
 .v-card__actions {
   padding: 8px 16px;
-  border-top: 1px solid $grey-2;
+  border-top: 1px solid $border-color;
 
   .v-btn + .v-btn, div + .v-btn {
     margin-left: 16px;
