--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -2,7 +2,7 @@ body, .body {
   font-family: $font-family;
   font-size: $base-font-size;
   color: $text-color;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 a {
@@ -17,20 +17,19 @@ a {
 h1, .h1 {
   font-size: 44px;
   line-height: 58px;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 h2, .h2 {
-  font-size: $h2-font-size;
-  line-height: 34px;
-  font-weight: 400;
+  font-size: 36px;
+  line-height: 44px;
+  font-weight: 300;
 }
 
-h3, .h3 {
-  font-size: $base-font-size;
-  line-height: 20px;
-  color: rgba($grey-9, 0.5);
-  text-transform: uppercase;
+h3, .h3, .lead {
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 400;
 }
 
 h4, .h4 {
@@ -38,13 +37,18 @@ h4, .h4 {
   line-height: 20px;
   color: initial;
   text-transform: initial;
+  font-weight: 400;
 }
 
-.lead {
-  font-size: $lead-font-size;
-  line-height: 34px;
+.light {
+  color: $light-color;
+  font-weight: 300;
 }
 
 .capitalize {
   text-transform: capitalize;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
